[metadata]
name = git-bin

[global]
verbose = 0

[egg_info]
egg_base = /tmp

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9

[options.data_files]
bin =
    bin/*
/etc/gitconfig =
    .gitconfig
/etc/profile.d =
    lib/*
etc/gh =
    gh/*

[options.entry_points]
console_scripts =
    gbin = git_bin:app

[options.extras_require]
test = 
    pytest

[options.packages.find]
where = src
